--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-DatasetParser Version: 0.1, Updated: Thursday, 18th February 2010
+= DatasetParser Version: 0.1 =
+
+Updated: Thursday, 18th February 2010
 
 See also http://weborganics.co.uk/dataset-transformations/
