--- a/README
+++ b/README
@@ -1,7 +1,12 @@
-= DatasetParser Version: 0.2 =
+= DatasetParser Version: 1.0 =
 
-Updated: Tuesday, 23rd February 2010
+Updated: Tuesday, 2nd March 2010
 
 usage: see example.php 
 
 See also http://weborganics.co.uk/dataset-transformations/
+
+This version of DatasetParser includes a "lite" version of ARC2 by Benjamin Nowack see http://arc.semsol.org/.
+The lite version ARC2 only includes the tools to parse from RDF to other formats such as NTriples, Turtle and RDFJson.
+
+Also Included are various examples of dataset transformations including all HTML and JSON, You will have to edit the source of each file and replace the dataset (HTML) and base (JSON) links to where the files actually are on your server.
