Replaced example.php for index.php

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 Updated: Tuesday, 2nd March 2010
 
-usage: see example.php 
+usage: see index.php 
 
 See also http://weborganics.co.uk/dataset-transformations/
 
